<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TikTok Video Download Features -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/tiktok_download_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="video_download"
            app:summary="@string/video_download_sum"
            app:title="@string/video_download" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="video_download"
            app:key="download_no_watermark"
            app:defaultValue="true"
            app:summary="@string/download_no_watermark_sum"
            app:title="@string/download_no_watermark" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="download_service_hook"
            app:summary="@string/download_service_hook_sum"
            app:title="@string/download_service_hook" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="download_service_hook"
            app:key="hook_download_aweme_service"
            app:defaultValue="true"
            app:summary="@string/hook_download_aweme_service_sum"
            app:title="@string/hook_download_aweme_service" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="download_service_hook"
            app:key="hook_share_helper"
            app:defaultValue="false"
            app:summary="@string/hook_share_helper_sum"
            app:title="@string/hook_share_helper" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="download_service_hook"
            app:key="hook_network_utils"
            app:defaultValue="false"
            app:summary="@string/hook_network_utils_sum"
            app:title="@string/hook_network_utils" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="story_download"
            app:summary="@string/story_download_sum"
            app:title="@string/story_download" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="live_stream_download"
            app:summary="@string/live_stream_download_sum"
            app:title="@string/live_stream_download" />

        <com.wmods.tkkenhancer.preference.FileSelectPreference
            android:defaultValue="/sdcard/TikTok/Downloads"
            app:directory="true"
            app:key="tiktok_download_path"
            app:title="@string/tiktok_download_path" />

    </PreferenceCategory>

    <!-- TikTok Video Quality -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/tiktok_quality_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="video_quality"
            app:summary="@string/video_quality_sum"
            app:title="@string/video_quality" />

        <ListPreference
            android:dependency="video_quality"
            android:defaultValue="ultra"
            android:entries="@array/quality_level_entries"
            android:entryValues="@array/quality_level_values"
            app:key="quality_level"
            app:summary="@string/quality_level_sum"
            app:title="@string/quality_level" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="video_quality"
            app:key="force_hd_quality"
            app:defaultValue="true"
            app:summary="@string/force_hd_quality_sum"
            app:title="@string/force_hd_quality" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="video_quality"
            app:key="force_high_bitrate"
            app:summary="@string/force_high_bitrate_sum"
            app:title="@string/force_high_bitrate" />

        <ListPreference
            android:dependency="force_high_bitrate"
            android:defaultValue="5000000"
            android:entries="@array/bitrate_entries"
            android:entryValues="@array/bitrate_values"
            app:key="target_bitrate"
            app:summary="@string/target_bitrate_sum"
            app:title="@string/target_bitrate" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="video_quality"
            app:key="hook_rate_setting_model"
            app:defaultValue="true"
            app:summary="@string/hook_rate_setting_model_sum"
            app:title="@string/hook_rate_setting_model" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="video_quality"
            app:key="hook_gear_set"
            app:defaultValue="true"
            app:summary="@string/hook_gear_set_sum"
            app:title="@string/hook_gear_set" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="video_quality"
            app:key="hook_auto_bitrate_set"
            app:defaultValue="true"
            app:summary="@string/hook_auto_bitrate_set_sum"
            app:title="@string/hook_auto_bitrate_set" />

    </PreferenceCategory>

    <!-- TikTok Auto-Play Control -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/tiktok_autoplay_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="autoplay_control"
            app:summary="@string/autoplay_control_sum"
            app:title="@string/autoplay_control" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="autoplay_control"
            app:key="disable_autoplay"
            app:summary="@string/disable_autoplay_sum"
            app:title="@string/disable_autoplay" />

    </PreferenceCategory>

    <!-- TikTok Ad Blocker -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/tiktok_ad_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="ad_blocker"
            app:summary="@string/ad_blocker_sum"
            app:title="@string/ad_blocker" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="ad_blocker"
            app:key="block_commercialize"
            app:defaultValue="true"
            app:summary="@string/block_commercialize_sum"
            app:title="@string/block_commercialize" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="ad_blocker"
            app:key="block_promoted"
            app:defaultValue="true"
            app:summary="@string/block_promoted_sum"
            app:title="@string/block_promoted" />

    </PreferenceCategory>

    <!-- Original Media Settings (kept for compatibility) -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_image">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="imagequality"
            app:summary="@string/imagequality_sum"
            app:title="@string/imagequality" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/download_title">

        <com.wmods.tkkenhancer.preference.FileSelectPreference
            android:defaultValue="/sdcard/Download"
            app:directory="true"
            app:key="download_local"
            app:title="@string/local_download" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="downloadstatus"
            app:summary="@string/statusdowload_sum"
            app:title="@string/statusdowload" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="downloadviewonce"
            app:summary="@string/downloadviewonce_sum"
            app:title="@string/downloadviewonce" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_video">

        <com.wmods.tkkenhancer.preference.FloatSeekBarPreference
            android:defaultValue="60"
            app:key="video_limit_size"
            app:maxValue="120"
            app:minValue="30"
            app:title="@string/increase_video_size_limit"
            app:valueSpacing="10" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="videoquality"
            app:summary="@string/videoquality_sum"
            app:title="@string/videoquality" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="videoquality"
            app:key="video_real_resolution"
            app:summary="@string/send_video_in_real_resolution_sum"
            app:title="@string/send_video_in_real_resolution" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="videoquality"
            app:key="video_maxfps"
            app:summary="@string/send_video_in_60fps_sum"
            app:title="@string/send_video_in_60fps" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_audio">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="disable_sensor_proximity"
            app:summary="@string/disable_the_proximity_sensor_sum"
            app:title="@string/disable_the_proximity_sensor" />


        <rikka.material.preference.MaterialSwitchPreference
            app:key="proximity_audios"
            app:summary="@string/disable_audio_sensor_sum"
            app:title="@string/disable_audio_sensor" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/audio_type_buttons"
            android:entryValues="@array/audio_type_values"
            android:summary="@string/send_audio_as_voice_audio_note_sum"
            app:key="audio_type"
            app:title="@string/send_audio_as_voice_audio_note" />

        <com.wmods.tkkenhancer.preference.FloatSeekBarPreference
            android:defaultValue="2"
            app:key="voicenote_speed"
            app:maxValue="5"
            app:minValue="0.1"
            app:title="@string/voice_note_speed" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="audio_transcription"
            app:summary="@string/audio_transcription_sum"
            app:title="@string/audio_transcription" />

        <ListPreference
            android:dependency="audio_transcription"
            android:defaultValue="assemblyai"
            android:entries="@array/transcription_provider_entries"
            android:entryValues="@array/transcription_provider_values"
            app:key="transcription_provider"
            app:summary="@string/transcription_provider_sum"
            app:title="@string/transcription_provider" />

        <EditTextPreference
            android:dependency="audio_transcription"
            app:key="assemblyai_key"
            app:summary="@string/assemblyai_key_sum"
            app:title="@string/assemblyai_key" />

        <EditTextPreference
            android:dependency="audio_transcription"
            app:key="groq_api_key"
            app:summary="@string/groq_api_key_sum"
            app:title="@string/groq_api_key" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/other">

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="media_preview"
            app:summary="@string/enable_media_preview_sum"
            app:title="@string/enable_media_preview" />

    </PreferenceCategory>


</PreferenceScreen>
