<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TikTok Privacy Features -->
    <PreferenceCategory 
        app:iconSpaceReserved="false"
        app:title="@string/tiktok_privacy_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="analytics_blocker"
            app:summary="@string/analytics_blocker_sum"
            app:title="@string/analytics_blocker" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="privacy_enhancer"
            app:summary="@string/privacy_enhancer_sum"
            app:title="@string/privacy_enhancer" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="privacy_enhancer"
            app:key="hide_view_history"
            app:defaultValue="true"
            app:summary="@string/hide_view_history_sum"
            app:title="@string/hide_view_history" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="privacy_enhancer"
            app:key="hide_profile_visits"
            app:defaultValue="true"
            app:summary="@string/hide_profile_visits_sum"
            app:title="@string/hide_profile_visits" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="privacy_enhancer"
            app:key="disable_analytics"
            app:defaultValue="true"
            app:summary="@string/disable_analytics_sum"
            app:title="@string/disable_analytics" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="disable_analytics"
            app:key="block_firebase_analytics"
            app:defaultValue="true"
            app:summary="@string/block_firebase_analytics_sum"
            app:title="@string/block_firebase_analytics" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="disable_analytics"
            app:key="block_tiktok_analytics"
            app:defaultValue="true"
            app:summary="@string/block_tiktok_analytics_sum"
            app:title="@string/block_tiktok_analytics" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="disable_analytics"
            app:key="block_telemetry_upload"
            app:defaultValue="true"
            app:summary="@string/block_telemetry_upload_sum"
            app:title="@string/block_telemetry_upload" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="disable_analytics"
            app:key="block_aweme_analytics"
            app:defaultValue="true"
            app:summary="@string/block_aweme_analytics_sum"
            app:title="@string/block_aweme_analytics" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="privacy_enhancer"
            app:key="block_data_collection"
            app:defaultValue="true"
            app:summary="@string/block_data_collection_sum"
            app:title="@string/block_data_collection" />

    </PreferenceCategory>

</PreferenceScreen>
