<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TikTok Customization - Removed WhatsApp-specific options -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="changecolor"
            app:summary="@string/colors_customization_sum"
            app:title="@string/colors_customization" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="changecolor"
            app:key="primary_color"
            app:summary="@string/default_color"
            app:title="@string/primary_color" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="changecolor"
            app:key="background_color"
            app:summary="@string/default_color"
            app:title="@string/background_color" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="changecolor"
            app:key="text_color"
            app:summary="@string/default_color"
            app:title="@string/text_color" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:summary="@string/custom_filters_sum"
            app:key="custom_filters"
            app:title="@string/custom_appearance" />

        <EditTextPreference
            android:summary="@string/filter_items_by_id_sum"
            app:dependency="custom_filters"
            app:key="filter_items"
            app:title="@string/filter_items_by_id" />

        <EditTextPreference
            android:summary="@string/custom_theme_css_sum"
            app:dependency="custom_filters"
            app:key="css_theme"
            app:title="@string/custom_theme_css" />

        <EditTextPreference
            android:summary="@string/change_default_dpi_sum"
            app:defaultValue="0"
            app:dependency="custom_filters"
            app:key="change_dpi"
            app:title="@string/change_default_dpi" />

        <com.wmods.tkkenhancer.preference.ThemePreference
            android:key="folder_theme"
            app:dependency="custom_filters"
            android:summary="@string/manage_theme_sum"
            android:title="@string/theme_manager" />

    </PreferenceCategory>

</PreferenceScreen>
